--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>
-            Git Learning
+            Git Learning By Vs Code
         </title>
     </head>
 
     <body>
-        <h1>Rahman Git</h1>
+        <h1>Rahman Git February </h1>
+        <h3>Belajar Git</h3>
+        <h3>Belajar GitHub</h3>
     </body>
 </html>
