--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Rahman Git February </h1>
-        <h3>Belajar Git</h3>
+        <h3><b><i>Belajar Gitueee</i></b></h3>
         <h3>Belajar GitHub</h3>
     </body>
 </html>
