--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Rahman Git February </h1>
         <h3><b><i>Belajar Gitueee</i></b></h3>
         <h3>Belajar GitHub</h3>
+        <h3>Belajar Lgi 2nd March</h3>
     </body>
 </html>
